...
                    android:hint="@string/text_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fab_picture">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    android:hint="@string/text_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    android:hint="@string/text_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>
...
                    android:hint="@string/text_repassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        app:bindLoadingEditTextState="@{viewModel.viewState}" />

                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btn_register"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:backgroundTint="@color/green_variant"
...
